refactor: renamed to rest instead of global